<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tvseries"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/title_tvshow" />
</menu>